Les règles configurables se modifient, et s'expliquent
Trois demandes, et un manque qu'elles ont révélé.

La palette du logo — bleu acier #307890, orange #F08840 — devient la valeur par
défaut des deux règles de marque (décision 0032, qui amende 0025 sur ce point).
L'amorçage n'a plus à les poser : le registre les porte.

Le tableau des règles ne montrait qu'une « source » — « F01 règle 29 » — qui ne
dit rien à un gérant. Il porte maintenant le libellé de la règle, son
explication en français avec un exemple quand la valeur ne parle pas d'elle-même,
et distingue ce que le club choisit de ce que Clubify fixe. Un test refuse toute
règle ajoutée sans description, et nomme laquelle.

Surtout : **les règles dites configurables ne se modifiaient pas**. L'API
existait et était testée, mais l'écran était en lecture seule. Chaque règle du
ressort du club a désormais son champ, du bon type ; celles que Clubify fixe
restent en lecture. Ce n'était prévu dans aucune feature à venir : c'était un
trou dans F01.

Au passage : « true » s'affichait brut, et l'ordre des règles était celui d'une
table de hachage. La valeur se lit en français, et l'ordre est celui de la
déclaration, qui groupe par domaine.

77 tests backend, 58 unitaires d'interface, 16 parcours fonctionnels, verts.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01ViEcD75tDcp4v6Y1YDjAs8